# sge_source

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  apply_clang_format.py  copy_engine_helper.cmake  engine_install.cmake  vs-chromium-project.txt
libs/mdlconvlib/: CMakeLists.txt
libs/mdlconvlib/src/: FBXSDKParser.cpp  FBXSDKParser.h  IAssetRelocationPolicy.cpp  IAssetRelocationPolicy.h  ModelParseSettings.h  sgeImportFBXFile.cpp  sgeImportFBXFile.h
libs/sge_audio/: CMakeLists.txt
libs/sge_audio/src/sge_audio/: AudioDecoder.cpp  AudioDecoder.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceSdl.cpp  AudioDeviceSdl.h  AudioTrack.cpp  AudioTrack.h  audio_assets.cpp  audio_assets.h  audio_decoder.cpp  audio_decoder.h  audio_device.cpp  audio_device.h  audio_device_sdl.cpp  audio_device_sdl.h  audio_track.cpp  audio_track.h
libs/sge_core/: CMakeLists.txt
libs/sge_core/core_shaders/: ConstantColor.shader  FWDDefault_buildShadowMaps.h  FWDDefault_buildShadowMaps.shader  FWDDefault_shading.shader  ShadeCommon.h  SkyGradient.shader  ggx.shader
libs/sge_core/src/sge_core/: Animator.cpp  Animator.h  AssetLibrary.cpp  AssetLibrary.h  CoreLog.cpp  CoreLog.h  DebugDraw.cpp  DebugDraw.h  DebugDraw2.cpp  DebugDraw2.h  GeomGen.cpp  GeomGen.h  Geometry.h  Gizmo3D.cpp  Gizmo3D.h  ICore.cpp  ICore.h  QuickDraw.cpp  QuickDraw.h  SGEImGui.cpp  SGEImGui.h  Sprite.cpp  Sprite.h  setImGuiContexCore.cpp  setImGuiContexCore.h  sgecore_api.h
libs/sge_core/src/sge_core/GameUI/: Layout.cpp  Layout.h  Sizing.h  UIContext.cpp  UIContext.h  Widget.cpp  Widget.h
libs/sge_core/src/sge_core/application/: application.cpp  application.cpp.legacy  application.h  input.cpp  input.h
libs/sge_core/src/sge_core/dds/: dds.cpp  dds.h
libs/sge_core/src/sge_core/model/: CollisionMesh.h  EvaluatedModel.cpp  EvaluatedModel.h  Model.cpp  Model.h  ModelReader.cpp  ModelReader.h  ModelWriter.cpp  ModelWriter.h  Parameter.cpp  Parameter.h
libs/sge_core/src/sge_core/shaders/: ConstantColorShader.cpp  ConstantColorShader.h  ShadingProgramPermuator.cpp  ShadingProgramPermuator.h  modeldraw.cpp  modeldraw.h
libs/sge_core/src/sge_core/ui/: MultiCurve2DEditor.cpp  MultiCurve2DEditor.h
libs/sge_engine/: CMakeLists.txt
libs/sge_engine/assets/editor/models/: box.mdl  cone.mdl  cylinder.mdl  gizmo3d.mdl  sphere.mdl
libs/sge_engine/src/sge_engine/: Actor.cpp  Actor.h  AssetProperty.cpp  AssetProperty.h  Camera.cpp  Camera.h  DefaultGameDrawer.cpp  DefaultGameDrawer.h  EngineGlobal.cpp  EngineGlobal.h  GameDrawer.cpp  GameDrawer.h  GameExport.cpp  GameExport.h  GameInspector.cpp  GameInspector.h  GameObject.cpp  GameObject.h  GamePlayerSettings.cpp  GamePlayerSettings.h  GameSerialization.cpp  GameSerialization.h  GameWorld.cpp  GameWorld.h  IPlugin.cpp  IPlugin.h  IWorldScript.cpp  IWorldScript.h  InspectorCmd.cpp  InspectorCmd.h  InspectorTool.cpp  InspectorTool.h  Light.h  Physics.cpp  Physics.h  PhysicsDebugDraw.cpp  PhysicsDebugDraw.h  PhysicsHelpers.cpp  PhysicsHelpers.h  PlantingTool.cpp  (+29 more)
libs/sge_engine/src/sge_engine/actors/: ABackgroundMusic.cpp  ABackgroundMusic.h  ABlockingObstacle.cpp  ABlockingObstacle.h  ACRSpline.cpp  ACRSpline.h  ACamera.cpp  ACamera.h  ADynamicObstacle.cpp  ADynamicObstacle.h  AInfinitePlaneObstacle.cpp  AInfinitePlaneObstacle.h  AInvisibleRigidObstacle.cpp  AInvisibleRigidObstacle.h  ALight.cpp  ALight.h  ALine.cpp  ALine.h  ALocator.cpp  ALocator.h  ANavMesh.cpp  ANavMesh.h  ANavMesh_btCollisionShapeToTriangles.cpp  ANavMesh_btCollisionShapeToTriangles.h  AParticles.cpp  AParticles.h  AStaticObstacle.cpp  AStaticObstacle.h  ATerrainPrimitive.cpp  ATerrainPrimitive.h  ATimeline.cpp  ATimeline.h  IKNode.cpp  IKNode.h  RecastDetourWrapper.h
libs/sge_engine/src/sge_engine/behaviours/: CharacterController.cpp  CharacterController.h
libs/sge_engine/src/sge_engine/materials/: Material.cpp  Material.h
libs/sge_engine/src/sge_engine/traits/: TraitActorList.cpp  TraitActorList.h  TraitCamera.h  TraitCharacterController.cpp  TraitCharacterController.h  TraitCustomAE.h  TraitModel.cpp  TraitModel.h  TraitPath.h  (+16 more)
libs/sge_renderer/: CMakeLists.txt
libs/sge_utils/: CMakeLists.txt
libs/sge_utils/src/sge_utils/: Core_ResultCode.inl  Logger.cpp  Logger.h  sge_utils.cpp  sge_utils.h
libs/sge_utils/tests/: Optional.Test.cpp  SgeUtilsTestMain.cpp  SgeUtilsTestPlayground.cpp
libs_ext/HLSLParser/: CMakeLists.txt
libs_ext/HLSLParser/src/: Engine.cpp  Engine.h  GLSLGenerator.cpp  GLSLGenerator.h  HLSLGenerator.cpp  HLSLTree.cpp  MSLGenerator.cpp  MSLGenerator.h
libs_ext/bullet/: CMakeLists.txt
libs_ext/bullet/bullet3/: CMakeLists.txt
libs_ext/mcpp/: CMakeLists.txt  SGE_Readme.txt
libs_ext/mcpp/mcpp-2.7.2/src/: cc1.c  directive.c.bak  eval.c  expand.c  internal.H  main.c  noconfig.H  sge_mcpp.h  sge_mcpp_file.c  sge_mcpp_file.h  support.c  support.c.bak  system.c
libs_ext/mcpp/mcpp-2.7.2/tool/: ins_once.c
libs_ext/recastnavigation/: CMakeLists.txt  sgeReadme.txt
project_maker/: CMakeLists.txt
project_maker/src/: ProjectMakerMain.cpp  cmakeCode.h
samples/Demo/: CMakeLists.txt
samples/Demo/assets_raw/: catBall.blend  catBall.fbx  level.blend  level.fbx  playerBall.blend  playerBall.fbx
samples/Demo/src/: MainMenuScript.cpp  Player.cpp  PluginMain.cpp
samples/Demo/src/assets_raw/: playerBall.blend  playerBall.fbx
samples/SpriteGame2D/: CMakeLists.txt
samples/SpriteGame2D/src/: PluginMain.cpp  Snowman.cpp
samples/TemplateGame/: CMakeLists.txt
samples/TemplateGame/src/: DummyActor.cpp  PluginMain.cpp
scene_parser/: CMakeLists.txt
scene_parser/src/: ArgParser.cpp  ArgParser.h  AssimpSceneTraverser.cpp,legacy  AssimpSceneTraverser.h.legacy  FBXSDKParser.cpp  FBXSDKParser.h  IAssetRelocationPolicy.cpp  scene_parser.cpp
sge_editor/: CMakeLists.txt
sge_editor/src/exe/: DummyPlugin.cpp  DummyPlugin.h  MiniDump.cpp  MiniDump.h  SgeEditorExeMain.cpp
sge_editor/src/win_rc/: sge_game.rc
sge_player/: CMakeLists.txt
sge_player/src/exe/: DummyPlugin.cpp  GameMode.cpp  GameMode.h  sgePlayerMain.cpp
sge_player/src/win_rc/: resource.h  sge_game.aps
(+205 files in other folders)
