
set(BUILD_BULLET2_DEMOS OFF CACHE BOOL "  " FORCE)
set(BUILD_BULLET3 OFF CACHE BOOL "  " FORCE)
set(BUILD_CPU_DEMOS OFF CACHE BOOL "  " FORCE)
set(BUILD_ENET OFF CACHE BOOL "  " FORCE)
set(BUILD_EXTRAS OFF CACHE BOOL "  " FORCE)
set(BUILD_OPENGL3_DEMOS OFF CACHE BOOL "  " FORCE)
set(BUILD_SHARED_LIBS  OFF CACHE BOOL "  " FORCE)
set(BUILD_UNIT_TESTS OFF CACHE BOOL "  " FORCE)
set(USE_MSVC_RUNTIME_LIBRARY_DLL ON CACHE BOOL "  " FORCE)
set(USE_MSVC_INCREMENTAL_LINKING ON CACHE BOOL "  " FORCE)

set(INSTALL_LIBS CACHE BOOL "  " FORCE)
set(INSTALL_CMAKE_FILES CACHE BOOL "  " FORCE)

add_subdirectory(bullet3)
